--- a/src/projects.json
+++ b/src/projects.json
@@ -1,5 +1,14 @@
 [
   {
+    "id": 7,
+    "title": "CHEFocus",
+    "description": "This application is perfect for all the chefs looking for a good recipe! This application allows users to view and share their favorite recipes. Users are also able to include a picture of the prepared meal on the recipe. ",
+    "image": "./assets/images/chefocus.png",
+    "technologies": "Javascript, Node.js, React.js, Material UI, Heroku, CSS, MySQL",
+    "deployed": "https://www.chefocus.com/",
+    "github": "https://github.com/IsraelGuillermo/chefocus"
+  },
+  {
     "id": 1,
     "title": "IntelliSup",
     "description": "The application is designed to allow user to make a new purchase order from suppliers. This order is then submitted into the database and displayed in a table through tabulator. The application also allows the user to update tracking information and estimated ship date for each product.",
